# meevax

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  VERSION  bootstrap.scm  build.sh  gmon.out  setup.scm  symbol  tarai.sh  test.sh
.github/: pull_request_template.md
.github/workflows/: build.yaml  main.yaml  main.yml  package.yaml  release.yaml  shellcheck.yaml
basis/: configure.cmake  define-syntax.ss  derived-expression-types.ss  dynamic-wind.ss  meevax.ss  overture.ss  r4rs-essential.ss  r4rs.ss  r5rs.ss  r7rs.ss  srfi-0.ss  srfi-1.ss  srfi-11.ss  srfi-111.ss  srfi-141.ss  srfi-143.ss  srfi-144.ss  srfi-149.ss  srfi-151.ss  srfi-16.ss  srfi-211.ss  srfi-23.ss  srfi-31.ss  srfi-34.ss  srfi-38.ss  srfi-39.ss  srfi-4.ss  srfi-45.ss  srfi-6.ss  srfi-78.ss  srfi-8.ss  srfi-9.ss  srfi-98.ss  values.ss
basis/include/meevax/: basis.hpp
benchmark/: ack.ss  cpstak.ss  ctak.ss  deriv.ss  fib.ss  profile.sh  tak.ss  takl.ss  tarai.ss
configure/: Doxyfile  README.md  README.md.cmake  UnicodeData.cmake  basis.cmake  basis.cpp  basis.hpp  configuration.hpp  configuration.hpp.cmake  configurator.hpp  configure.hpp.cmake  feature.hpp  feature.hpp.cmake  help.txt  references.bib  system.cpp  uninstall.sh.cmake  version.cpp  version.hpp  version.hpp.cmake
example/: CMakeLists.txt  example.cpp  example.ss  foreign-function.ss  test.sh
example/lib/: example-1.cpp
example/src/: main.cpp  test-collector.cpp  test-gc.cpp  test-list.cpp  test-r7rs.cpp
examples/use-as-embedded-language/: CMakeLists.txt  test.sh
examples/use-as-embedded-language/src/: main.cpp
experimental/: srfi-149.ss  srfi-78.ss
include/meevax/: configuration.hpp  standard.hpp
include/meevax/algorithm/: fold.hpp  for_each.hpp
include/meevax/behavior/: steering.hpp
include/meevax/bit/: bit_cast.hpp  log2.hpp
include/meevax/bitset/: simple_bitset.hpp
include/meevax/cairo/: context.hpp  surface.hpp
include/meevax/character/: category.hpp  predicate.hpp  unicode.hpp
include/meevax/chrono/: duration.hpp
include/meevax/concepts/: addable.hpp  any_of.hpp  arithmetic.hpp  is_character.hpp  is_equality_comparable.hpp  is_stream_insertable.hpp  is_visualizable.hpp  macro.hpp  requires.hpp
include/meevax/console/: capability.hpp  escape_sequence.hpp
include/meevax/core/: accessor.hpp  boolean.hpp  character.hpp  closure.hpp  compiler.hpp  context.hpp  cursor.hpp  evaluator.hpp  exception.hpp  instruction.hpp  iterator.hpp  machine.hpp  modular.hpp  namescope.hpp  number.hpp  operator.hpp  pair.hpp  (+5 more)
include/scheme/: base.hpp
lib/: character.cpp  equivalence.cpp  example.cpp  experimental.cpp  io.cpp  numerical.cpp  overture.ss  pair.cpp  posix.cpp  string.cpp  symbol.cpp  test-foreign-function-interface.cpp  vector.cpp
lib/experimental/: srfi-149.ss
script/: benchmark.sh  build.sh  cachegrind.sh  callgrind.sh  compile-r7rs.sh  develop.sh  format.awk  install.sh  massif.sh  memcheck.sh  references.sh  repl.sh  setup-macos-15.sh  setup-macos.sh  setup-ubuntu-22.04.sh  setup-ubuntu.sh  setup.sh  tarai.sh  test.sh  unicode.sh  update.sh  valgrind.sh  version.sh
scripts/: develop.sh  test.sh
src/: base.cpp  basis.cpp  boolean.cpp  character.cpp  closure.cpp  continuation.cpp  core.cpp  error.cpp  exact_integer.cpp  example.cpp  format.cpp  ghost.cpp  instruction.cpp  kernel.cpp  library.cpp  list.cpp  literal.cpp  main.cpp  meevax.cpp  miscellaneous.cpp  number.cpp  object.cpp  pair.cpp  path.cpp  port.cpp  posix.cpp  ratio.cpp  reader.cpp  standard.cpp  string.cpp  symbol.cpp  syntactic_continuation.cpp  tagged_shared_pointer.cpp  the_roots_of_lisp.mvx  unit-test.cpp  vector.cpp
src/chrono/: duration.cpp
src/functional/: addition.cpp  arithmetic_operation.cpp  division.cpp  modulo.cpp  multiplication.cpp  subtraction.cpp
src/iostream/: escape_sequence.cpp  putback.cpp
src/kernel/: basis.cpp  binary_input_file_port.cpp  binary_output_file_port.cpp  boolean.cpp  boot.cpp  box.cpp  character.cpp  circular_list.cpp  closure.cpp  collector.cpp  comparator.cpp  complex.cpp  conditional_expand.cpp  configuration.cpp  configurator.cpp  constant.cpp  continuation.cpp  de_bruijn_index.cpp  describe.cpp  disassemble.cpp  dynamic_environment.cpp  environment.cpp  eof.cpp  equivalence.cpp  error.cpp  exact_integer.cpp  expander.cpp  export_spec.cpp  file_port.cpp  generator.cpp  ghost.cpp  identifier.cpp  identity.cpp  implementation_dependent.cpp  import_set.cpp  include.cpp  input_file_port.cpp  input_string_port.cpp  instruction.cpp  instruction_level_procedure.cpp  (+40 more)
src/memory/: collector.cpp  header.cpp  marker.cpp  model.cpp  region.cpp  tracer.cpp
src/scheme/: base.cpp
src/standard/: experimental.cpp  file-system.cpp  fundamental.cpp  numerical.cpp
src/string/: header.cpp  indent.cpp  unicode.cpp
src/system/: experimental.cpp  file-system.cpp  numerical.cpp  write.cpp
src/utility/: demangle.cpp
standard/: foreign-function-interface.cpp  overture.ss
standard/experimental/: srfi-1.ss
test/: abandoned.ss  allocator.cpp  bitset.cpp  chibi-basic.ss  circular-list.ss  collector.cpp  cxr.scm  environment.cpp  er-macro-transformer.ss  expand.ss  expect.scm  ffi.ss  identifier.ss  integer_set.cpp  internal-definition.ss  internal-syntax-definition.ss  kffd.ss  lambda.ss  lazy_evaluation.mvx  let-syntax.ss  letrec-syntax.ss  library-declaration.ss  list.cpp  literal-expressions-1.ss  low-level-macro-facility.ss  macro-transformers.ss  macros.mvx  macros.scm  meta-circular-evaluator.meevax  meta-circular_evaluator.mvx  nan_boxing_pointer.cpp  number.ss  numerical-operations.ss  option.sh  pair.cpp  parameterize.ss  pointer_set.cpp  port.ss  print.sld  r4rs-appendix.ss  (+36 more)
test.obsoleted/: expect.scm  meta-circular-evaluator.meevax  meta-circular-evaluator.ss  r7rs-6.6-character.scm  r7rs-7.3-derived-expression-types.scm  test.scm
test/utility/: print.ss
tests/: ill-formed-expressions.scm  meta-circular-evaluator.scm  meta-circular_evaluator.mvx  r7rs-6.1-equivalent-predicates.scm  r7rs-6.7-string.scm  r7rs-example-codes.scm  r7rs.scm  test.scm
tools/: develop.sh  uninstall.sh
(+347 files in other folders)
